@@ -77,10 +77,20 @@ public class ForumServiceImpl implements ForumService {
         return commentRepository.save(comment);
     }
 
+    @Override
+    public List<CommentDTO> getCommentsByPostId(Long postId) {
+        ForumPost post = forumPostRepository.findById(postId)
+                .orElseThrow(() -> new RuntimeException(("Post not found with id: " + postId)));
+
+        return post.getComments().stream()
+                .map(this::convertToCommentDTO)
+                .toList();
+    }
+
     private ForumPostResponse toForumPostResponse(ForumPost post) {
         List<CommentDTO> commentDTOs = post.getComments().stream()
                 .map(this::convertToCommentDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         AuthorInfo authorInfo = new AuthorInfo(post.getAuthor().getId(), post.getAuthor().getUsername());
         return new ForumPostResponse(
